<resources>
    <string name="app_name">NewsAppEIM</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="click_here_to_register">Not having an account? Click here to register…</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_click_here_to_login">Already have an account? Click here to login…</string>
    <string name="reset_password">Forgot password? Click here to reset…</string>
    <string name="confirm_password">Confirm password</string>
    <string name="title_activity_main_app">MainAppActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_add_post">Add post</string>
    <string name="title_profile">Profile</string>
    <string name="title_hot_news">Hot News</string>
    <string name="title_latest">Latest</string>
</resources>