<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_hot_news"
        android:icon="@drawable/ic_baseline_local_fire_department_24"
        android:title="@string/title_hot_news" />

    <item
        android:id="@+id/navigation_latest"
        android:icon="@drawable/ic_breaking_news_alt_1_48px"
        android:title="@string/title_latest" />

    <item
        android:id="@+id/navigation_new_post"
        android:icon="@drawable/ic_baseline_add_circle_outline_24"
        android:title="@string/title_add_post" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_round_account_circle_24"
        android:title="@string/title_profile" />

</menu>