<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_latest">

    <fragment
        android:id="@+id/navigation_latest"
        android:name="com.example.newsappeim.screens.main_app_ui.latest.LatestFragment"
        android:label="@string/title_latest"
        tools:layout="@layout/fragment_latest" />

    <fragment
        android:id="@+id/navigation_hot_news"
        android:name="com.example.newsappeim.screens.main_app_ui.hot_news.HotNewsFragment"
        android:label="@string/title_hot_news"
        tools:layout="@layout/fragment_hot_news" />

    <fragment
        android:id="@+id/navigation_new_post"
        android:name="com.example.newsappeim.screens.main_app_ui.new_post.NewPostFragment"
        android:label="@string/title_add_post"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.newsappeim.screens.main_app_ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.newsappeim.screens.main_app_ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>